feat(document-management): enhance projections, add owner-based filtering, and improve DB safety
- Updated CommAssetLandRepositoryand even  all other   types of  documents to support optional ownerId filtering in findAllActive
- Refactored CargoDamage, CertLicenses, Estate, AccordConcession, PermiConstruction projections
  to include full JOIN FETCH relationships and proper count queries for pagination
- Integrated CurrentUser service to pass ownerId dynamically based on logged-in user's role